--- a/PP.html
+++ b/PP.html
@@ -25,27 +25,27 @@
 
         <div class="portfolio-grid">
 
-            <div class="patent-card" data-number="US-2025-0001" data-inventor="Mayur Patel" data-filing="2023-11-05" data-status="Granted" data-abstract="A Portable Steam Inhalation Device for home/travel" data-image="./Patent Partners_Logo.png">
+            <div class="patent-card" data-number="Available on request" data-inventor="Available on request" data-filing="Available on request" data-status="Available on request" data-abstract="A fantastic Portable Steam Inhalation Device for home/travel capable of providing therapeutic steam and reverse charging from a mobile device" data-image="./Patent Partners_Logo.png">
                 <div class="patent-logo">
                     <img src="./Patent Partners_Logo.png" alt="Patent Logo 1">
                 </div>
                 <div class="patent-info">
-                    <p>A Portable Steam Inhalation Device for home/travel</p>
+                    <p>A Compact & Portable Steamer/Nebuliser for home or travel</p>
                     <a href="#" class="details-button">View Details</a>
                 </div>
             </div>
 
-            <div class="patent-card" data-number="US-2025-0002" data-inventor="R. Singh" data-filing="2024-02-20" data-status="Filed" data-abstract="Automatic Air Cooler Controller" data-image="./Patent Partners_Logo.png">
+            <div class="patent-card" data-number="Available on request" data-inventor="Available on request" data-filing="2024-02-20" data-status="Granted" data-abstract="Smart Controller for Automated Regulation of Air Cooler's parameters like temperature, humidity, and fan speed." data-image="./Patent Partners_Logo.png">
                 <div class="patent-logo">
                     <img src="./Patent Partners_Logo.png" alt="Patent Logo 2">
                 </div>
                 <div class="patent-info">
-                    <p>Automatic Air Cooler Controller</p>
+                    <p>Smart Controller for Automated Regulation of Air Cooler</p>
                     <a href="#" class="details-button">View Details</a>
                 </div>
             </div>
 
-            <div class="patent-card" data-number="US-2025-0003" data-inventor="S. Desai" data-filing="2022-06-18" data-status="Granted" data-abstract="EOT Crane Magnet Protection Device" data-image="./Patent Partners_Logo.png">
+            <div class="patent-card" data-number="Available on request" data-inventor="Available on request" data-filing="2022-06-18" data-status="Granted" data-abstract="EOT Crane Magnet Protection Device" data-image="./Patent Partners_Logo.png">
                 <div class="patent-logo">
                     <img src="./Patent Partners_Logo.png" alt="Patent Logo 3">
                 </div>
@@ -55,7 +55,7 @@
                 </div>
             </div>
 
-            <div class="patent-card" data-number="US-2025-0004" data-inventor="N. Rao" data-filing="2023-01-30" data-status="Published" data-abstract="Horn Pitch Controller" data-image="./Patent Partners_Logo.png">
+            <div class="patent-card" data-number="Available on request" data-inventor="Available on request" data-filing="2023-01-30" data-status="Published" data-abstract="Horn Pitch Controller" data-image="./Patent Partners_Logo.png">
                 <div class="patent-logo">
                     <img src="./Patent Partners_Logo.png" alt="Patent Logo 4">
                 </div>
@@ -65,7 +65,7 @@
                 </div>
             </div>
 
-            <div class="patent-card" data-number="US-2025-0005" data-inventor="D. Mehta" data-filing="2024-09-12" data-status="Filed" data-abstract="Hirshprung Disease detection device" data-image="./Patent Partners_Logo.png">
+            <div class="patent-card" data-number="Available on request" data-inventor="Available on request" data-filing="2024-09-12" data-status="Filed" data-abstract="Hirshprung Disease detection device" data-image="./Patent Partners_Logo.png">
                 <div class="patent-logo">
                     <img src="./Patent Partners_Logo.png" alt="Patent Logo 5">
                 </div>
@@ -75,7 +75,7 @@
                 </div>
             </div>
 
-            <div class="patent-card" data-number="US-2025-0006" data-inventor="K. Iyer" data-filing="2021-04-22" data-status="Granted" data-abstract="Lung Cancer Detection" data-image="./Patent Partners_Logo.png">
+            <div class="patent-card" data-number="Available on request" data-inventor="Available on request" data-filing="2021-04-22" data-status="Granted" data-abstract="Lung Cancer Detection" data-image="./Patent Partners_Logo.png">
                 <div class="patent-logo">
                     <img src="./Patent Partners_Logo.png" alt="Patent Logo 6">
                 </div>
@@ -85,7 +85,7 @@
                 </div>
             </div>
 
-            <div class="patent-card" data-number="US-2025-0007" data-inventor="P. Sharma" data-filing="2020-08-14" data-status="Granted" data-abstract="Prostate Cancer Detection Device" data-image="./Patent Partners_Logo.png">
+            <div class="patent-card" data-number="Available on request" data-inventor="Available on request" data-filing="2020-08-14" data-status="Granted" data-abstract="Prostate Cancer Detection Device" data-image="./Patent Partners_Logo.png">
                 <div class="patent-logo">
                     <img src="./Patent Partners_Logo.png" alt="Patent Logo 7">
                 </div>
@@ -95,7 +95,7 @@
                 </div>
             </div>
 
-            <div class="patent-card" data-number="US-2025-0008" data-inventor="L. Kapoor" data-filing="2022-12-01" data-status="Licensed" data-abstract="Breast Cancer Detection Device" data-image="./Patent Partners_Logo.png">
+            <div class="patent-card" data-number="Available on request" data-inventor="Available on request" data-filing="2022-12-01" data-status="Licensed" data-abstract="Breast Cancer Detection Device" data-image="./Patent Partners_Logo.png">
                 <div class="patent-logo">
                     <img src="./Patent Partners_Logo.png" alt="Patent Logo 8">
                 </div>
@@ -105,7 +105,7 @@
                 </div>
             </div>
 
-            <div class="patent-card" data-number="US-2025-0009" data-inventor="Team SportTech" data-filing="2023-05-10" data-status="Filed" data-abstract="A patented platform to provide data-driven, holistic training in sports to all those who are interested, no matter where they and what their skill level is. Improves performance safely." data-image="./Patent Partners_Logo.png">
+            <div class="patent-card" data-number="Available on request" data-inventor="Available on request" data-filing="2023-05-10" data-status="Filed" data-abstract="A patented platform to provide data-driven, holistic training in sports to all those who are interested, no matter where they and what their skill level is. Improves performance safely." data-image="./Patent Partners_Logo.png">
                 <div class="patent-logo">
                     <img src="./Patent Partners_Logo.png" alt="Patent Logo 9">
                 </div>
@@ -115,7 +115,7 @@
                 </div>
             </div>
 
-            <div class="patent-card" data-number="US-2025-0010" data-inventor="Team SportTech" data-filing="2023-05-10" data-status="Filed" data-abstract="A patented platform to provide data-driven, holistic training in sports to all those who are interested, no matter where they and what their skill level is. Improves performance safely." data-image="./Patent Partners_Logo.png">
+            <div class="patent-card" data-number="Available on request" data-inventor="Available on request" data-filing="2023-05-10" data-status="Filed" data-abstract="A patented platform to provide data-driven, holistic training in sports to all those who are interested, no matter where they and what their skill level is. Improves performance safely." data-image="./Patent Partners_Logo.png">
                 <div class="patent-logo">
                     <img src="./Patent Partners_Logo.png" alt="Patent Logo 10">
                 </div>
